# fastapi-starter

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  schemas.py
src/config/: config.py
src/domains/ping/: handler.py  routes.py  schema.py
src/exceptions/: client_error.py
src/middlewares/: __init__.py  cors.py  rate_limiter.py
src/utils/: __init__.py  route_mapper.py
